# rag_rncp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  ingestion.py  interface.py  prompt.py  retrieval.py
